# deluge-utilities

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: prek.yml  python-publish.yml
deluge-utilities/: deluge.py
deluge_utilities/: __init__.py  base_client.py  deluge.py  qbittorrent.py
