[project]
name = "deluge-utilities"
version = "0.0.5"
description = "A set of utilities to help you work with Deluge and qBittorrent"
authors = [{ name = "GitBib", email = "job@bnff.website" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["deluge", "qbittorrent", "torrent", "utilities"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
    "deluge-client>=1.10.2,<2",
    "qbittorrent-api>=2025.7.0",
]

[project.urls]
Homepage = "https://github.com/GitBib/deluge-utilities"
Repository = "https://github.com/GitBib/deluge-utilities"
"Bug Tracker" = "https://github.com/GitBib/deluge-utilities/issues"

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "prek>=0.2.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["deluge_utilities"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
